<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.2.1.RELEASE</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>ke.co.apollo</groupId>
	<artifactId>otp-apis</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Apollo Otp API</name>
	<description>Otp micro-service for Nirvana Project</description>
	<properties>
		<java.version>1.8</java.version>
		<checkstyle.file.path>checkstyle.xml</checkstyle.file.path>
		<checkstyle.latest.version>8.18</checkstyle.latest.version>
		<jacoco.version>0.8.3</jacoco.version>
		<jacoco.percentage.instruction>0.80</jacoco.percentage.instruction>
		<springfox-version>2.9.2</springfox-version>
		<spring-cloud.version>Greenwich.SR1</spring-cloud.version>
		<sonar.exclusions>**/*Application.*, **/*Util.*, **/*OtpCustomException.*, **/*SwaggerConfig.*,
			**/*MvcConfig.*, **/*AWSSecretManagerHelper.*, **/*SecretsConfigListener.*</sonar.exclusions>
		<sonar.coverage.exclusions>**/*Application.*,
			**/*MvcConfig.*, **/*AWSSecretManagerHelper.*, **/*SecretsConfigListener.*</sonar.coverage.exclusions>

		<!--liquibase-->
		<liquibase.propertyFile>src/main/resources/application.properties</liquibase.propertyFile>
		<liquibase.changeLogFile>src/main/resources/db/changelog/db.changelog-master.xml</liquibase.changeLogFile>
		<liquibase.outputChangeLogFile>src/main/resources/db/changelog/db.changelog-output.xml</liquibase.outputChangeLogFile>
		<diffChangeLogFile>src/main/resources/db/changelog/db.changelog-diff.xml</diffChangeLogFile>
		<liquibase.referenceUrl>hibernate:spring:ke.co.apollo.otp.entity?dialect=org.hibernate.dialect.MySQL5Dialect&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy</liquibase.referenceUrl>
		<liquibase.driver>com.mysql.cj.jdbc.Driver</liquibase.driver>
		<liquibase-core.version>4.8.0</liquibase-core.version>
		<liquibase-maven-plugin.version>4.1.1</liquibase-maven-plugin.version>
		<liquibase-hibernate5.version>4.1.1</liquibase-hibernate5.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web-services</artifactId>
		</dependency>
		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk-secretsmanager</artifactId>
			<version>1.11.502</version>
		</dependency>
		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk-ec2</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-aws</artifactId>
			<version>2.1.3.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-aws-messaging</artifactId>
			<version>2.1.3.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-aws-autoconfigure</artifactId>
			<version>2.1.3.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.mariadb.jdbc</groupId>
			<artifactId>mariadb-java-client</artifactId>
			<version>1.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20190722</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.9</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger2</artifactId>
			<version>${springfox-version}</version>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger-ui</artifactId>
			<version>${springfox-version}</version>
		</dependency>

		<!--liquibase-->
		<dependency>
			<groupId>org.liquibase</groupId>
			<artifactId>liquibase-core</artifactId>
			<version>${liquibase-core.version}</version>
		</dependency>
		<dependency>
			<groupId>org.liquibase</groupId>
			<artifactId>liquibase-maven-plugin</artifactId>
			<version>${liquibase-maven-plugin.version}</version>
		</dependency>
		<dependency>
			<groupId>org.liquibase.ext</groupId>
			<artifactId>liquibase-hibernate5</artifactId>
			<version>${liquibase-hibernate5.version}</version>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>software.amazon.awssdk</groupId>
				<artifactId>bom</artifactId>
				<version>2.10.4</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.amazonaws</groupId>
				<artifactId>aws-java-sdk-bom</artifactId>
				<version>1.11.549</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<configuration>
					<forkCount>3</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
					<excludes>
						<exclude>**/*Application.*</exclude>
						<exclude>**/*MvcConfig.*</exclude>
						<exclude>**/*SwaggerConfig.*</exclude>
						<exclude>**/*AWSSecretManagerHelper.*</exclude>
						<exclude>**/*SecretsConfigListener.*</exclude>
						<exclude>**/*Util.*</exclude>
						<exclude>**/*OtpCustomException.*</exclude>
					</excludes>
				</configuration>
				<version>0.8.4</version>
				<executions>
					<execution>
						<id>default-prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>default-report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
					<execution>
						<id>generate-code-coverage-report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonarsource.sonar-packaging-maven-plugin</groupId>
				<artifactId>sonar-packaging-maven-plugin</artifactId>
				<version>1.17</version>
				<extensions>true</extensions>
				<configuration>
					<pluginClass>org.silverbulleters.sonar.plugins.bsl.BSLPlugin</pluginClass>
					<sonarLintSupported>true</sonarLintSupported>
				</configuration>
			</plugin>

			<!--liquibase-->
			<plugin>
				<groupId>org.liquibase</groupId>
				<artifactId>liquibase-maven-plugin</artifactId>
				<version>${liquibase-maven-plugin.version}</version>
				<configuration>
					<changeLogFile>${liquibase.changeLogFile}</changeLogFile>
					<diffChangeLogFile>${diffChangeLogFile}</diffChangeLogFile>
					<outputChangeLogFile>${liquibase.outputChangeLogFile}</outputChangeLogFile>
					<driver>${liquibase.driver}</driver>
					<referenceUrl>${liquibase.referenceUrl}</referenceUrl>
					<propertyFile>${liquibase.propertyFile}</propertyFile>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.liquibase</groupId>
						<artifactId>liquibase-core</artifactId>
						<version>${liquibase-core.version}</version>
					</dependency>
					<dependency>
						<groupId>org.liquibase.ext</groupId>
						<artifactId>liquibase-hibernate5</artifactId>
						<version>${liquibase-hibernate5.version}</version>
					</dependency>
					<dependency>
						<groupId>org.springframework</groupId>
						<artifactId>spring-beans</artifactId>
						<version>5.2.1.RELEASE</version>
					</dependency>
					<dependency>
						<groupId>org.springframework.data</groupId>
						<artifactId>spring-data-jpa</artifactId>
						<version>2.2.1.RELEASE</version>
					</dependency>
					<dependency>
						<groupId>javax.validation</groupId>
						<artifactId>validation-api</artifactId>
						<version>2.0.1.Final</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>

</project>